--- a/style/__heder.scss
+++ b/style/__heder.scss
@@ -1,5 +1,148 @@
 @use'__commos' as c;
 
+
+.container {
+
+    max-width: 1068px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+header {
+    display: block;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+
+}
+
+header.Shadow {
+    background: c.$bg-color;
+    box-shadow: 4px 4px 20px rgb(15 54 55 / 20%);
+    transition: 0.5s ease;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 35px;
+
+
+}
+
+#menuIcon {
+    font-size: 24px;
+    cursor: pointer;
+    color: c.$text-color;
+    display: none;
+}
+
+.logo {
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: c.$text-color;
+
+    span {
+        color: c.$main-color;
+    }
+}
+
+.navar {
+    display: flex;
+    column-gap: 2rem;
+
+    a {
+        color: c.$text-color;
+        font-size: 1rem;
+        text-transform: uppercase;
+        font-weight: 500;
+
+        &:hover {
+            color: c.$main-color;
+            border-bottom: 3px solid c.$main-color;
+        }
+    }
+}
+
+.navar .active {
+    color: c.$main-color;
+    border-bottom: 3px solid c.$main-color;
+}
+
+#searchIcon {
+    font-size: 24px;
+    cursor: pointer;
+    color: c.$text-color ;
+    background: none;
+}
+
+.search-box.active {
+    clip-path: circle(144% at 100% 0%);
+    transition: 0.4s;
+}
+
+.search-box {
+    position: absolute;
+    top: 110%;
+    right: 0;
+    left: 0;
+    background: c.$bg-color;
+    box-shadow: 4px 4px 20px rgb(15 54 55 / 10%);
+    border: 1px solid c.$main-color;
+    border-radius: 0.5rem;
+    clip-path: circle(0% at 100% 0%);
+
+    input {
+        width: 100%;
+        padding: 20px;
+        border: none;
+        outline: none;
+        background: transparent;
+        font-size: 1rem;
+
+    }
+}
+
+
+#listprod {
+    position: fixed;
+    background: c.$bg-color;
+    border: 1px solid c.$main-color;
+    margin-top: 9rem;
+    margin-left: 15rem;
+    width: 20%;
+    z-index: 8;
+    display: none;
+
+    li a {
+        display: block;
+        width: 100%;
+        color: c.$text-color;
+        padding: 12px 20px;
+        font-size: 20px;
+
+        &:hover {
+            background: c.$main-color;
+            color: c.$bg-color;
+        }
+    }
+
+}
+
+/*
+
+#coverContSearc {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
 #barraDeNavegacion {
     display: flex;
     flex-direction: row;
@@ -48,3 +191,5 @@
         }
     }
 }
+
+*/
