--- a/style/__zonadecategorias.scss
+++ b/style/__zonadecategorias.scss
@@ -1,9 +1,8 @@
 @use'__commos' as c;
 
 .zonaCategoria {
-    width: 80%;
+
     text-align: center;
-    margin-left: 7rem;
 
 }
 
@@ -15,17 +14,27 @@
     gap: 0.5rem;
 
 
-    .elemt {
-        width: 250px;
-        height: 250px;
-        margin: 0.5rem 2rem;
-        border: solid 5px black;
+    .linkproductos {
+        border-bottom: dashed 2px c.$text-color;
+        margin-bottom: 40px;
         text-align: center;
-        font-size: 2rem;
 
+        img {
+            border: solid 2px c.$text-color;
+            border-radius: 100px;
+            margin: 15px;
+        }
 
-        h1 {
+        a {
             width: 100%;
+            font-size: 1.3rem;
+            margin: 2rem;
+            color: c.$text-color;
+        }
+
+        p {
+            margin-bottom: 10px;
         }
     }
+
 }
