--- a/style/__zonadeproductos.scss
+++ b/style/__zonadeproductos.scss
@@ -1,11 +1,75 @@
 @use'__commos' as c;
 
-.zonaDeProductos {
-    width: 100%;
-    height: 100vh;
-    border: solid 5px red;
+.contenedor {
+    max-width: auto;
+    padding: 10px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    /* oculto lo que queda fuera del .contenedor */
+    contain: paint;
+
+    .enSuperOterta {
+        font-size: 2.3rem;
+    }
+}
+
+/* SECCION CONTENEDOR DE ITEMS */
+.contenedor .contenedor-items {
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+    grid-gap: 10px;
+    grid-row-gap: 30px;
+    width: 30%;
+    height: 50%;
+    transition: .3s;
+}
+
+.contenedor .contenedor-items .item {
+    max-width: auto;
+    margin: 20px 0.1rem;
+    border: 1px solid #666;
+    border-radius: 10px;
+    padding: 0.5px;
+    transition: .3s;
+}
+
+.contenedor .contenedor-items .item .img-item {
+    width: 80%;
+}
+
+.contenedor .contenedor-items .item:hover {
+    box-shadow: 0 0 3px #666;
+    scale: 1.05;
+}
+
+.contenedor .contenedor-items .item .titulo-item {
+    display: block;
+    font-weight: bold;
+    font-size: 1.2rem;
     text-align: center;
-    font-size: 2rem;
+    text-transform: uppercase;
+}
 
+.contenedor .contenedor-items .item .precio-item {
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
+}
 
+.contenedor .contenedor-items .item .boton-item {
+    display: block;
+    margin: 8px auto;
+    border: none;
+    background-color: black;
+    color: #fff;
+    padding: 2px 7px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.bxs-star {
+    font-size: 1.3rem;
 }
