--- a/style/__heder.scss
+++ b/style/__heder.scss
@@ -125,6 +125,10 @@ header.Shadow {
         padding: 12px 20px;
         font-size: 20px;
 
+        &:hover {
+            background: c.$main-color;
+            color: c.$bg-color;
+        }
 
     }
 
