--- a/style/style.css
+++ b/style/style.css
@@ -144,6 +144,10 @@ header.Shadow {
   padding: 12px 20px;
   font-size: 20px;
 }
+#listprod li a:hover {
+  background: #d90429;
+  color: white;
+}
 
 /*
 
@@ -443,6 +447,10 @@ header.Shadow {
     padding: 12px 20px;
     font-size: 17px;
   }
+  #listprod li a:hover {
+    background: #d90429;
+    color: white;
+  }
   #slaider {
     grid-area: home;
     max-width: 100%;
@@ -643,6 +651,10 @@ header.Shadow {
     padding: 12px 20px;
     font-size: 17px;
   }
+  #listprod li a:hover {
+    background: #d90429;
+    color: white;
+  }
   #slaider {
     grid-area: home;
     max-width: 100%;
@@ -824,6 +836,10 @@ header.Shadow {
     color: #020102;
     padding: 12px 20px;
     font-size: 17px;
+  }
+  #listprod li a:hover {
+    background: #d90429;
+    color: white;
   }
   #slaider {
     grid-area: home;
