--- a/style/__footer.scss
+++ b/style/__footer.scss
@@ -10,6 +10,7 @@
     form {
 
         .tyc {
+            font-size: 1.3rem;
             color: #e80606;
             text-decoration: underline red;
         }
@@ -24,7 +25,7 @@
         border: 1px solid black;
         display: block;
         position: relative;
-        width: 20%;
+        width: 30%;
         cursor: pointer;
         font-family: 'Barlow', sans-serif;
         text-align: center;
