--- a/style/__responsive.scss
+++ b/style/__responsive.scss
@@ -285,7 +285,7 @@
 
             label,
             input {
-                margin: 0.5rem 0;
+                margin: 1rem 0;
             }
         }
 
@@ -293,8 +293,29 @@
 
 
         .acercaDeEmbalados {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
             margin: 0.5rem 0;
             border-bottom: double 1px #fff;
+            font-size: 1.3rem;
+        }
+
+        .redes1 {
+            display: flex;
+            flex-direction: column;
+
+            span {
+                font-size: 1.3rem;
+                margin: 1rem;
+            }
+        }
+
+        .redes {
+            display: flex;
+            flex-direction: column;
+            font-size: 1.3rem;
+            gap: 1rem;
         }
 
 
