--- a/style/style.css
+++ b/style/style.css
@@ -351,6 +351,7 @@ header.Shadow {
   text-align: center;
 }
 .footer form .tyc {
+  font-size: 1.3rem;
   color: #e80606;
   -webkit-text-decoration: underline red;
           text-decoration: underline red;
@@ -363,7 +364,7 @@ header.Shadow {
   border: 1px solid black;
   display: block;
   position: relative;
-  width: 20%;
+  width: 30%;
   cursor: pointer;
   font-family: "Barlow", sans-serif;
   text-align: center;
@@ -578,11 +579,29 @@ header.Shadow {
   }
   #seccion5 .formulario label,
   #seccion5 .formulario input {
-    margin: 0.5rem 0;
+    margin: 1rem 0;
   }
   #seccion5 .acercaDeEmbalados {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     margin: 0.5rem 0;
     border-bottom: double 1px #fff;
+    font-size: 1.3rem;
+  }
+  #seccion5 .redes1 {
+    display: flex;
+    flex-direction: column;
+  }
+  #seccion5 .redes1 span {
+    font-size: 1.3rem;
+    margin: 1rem;
+  }
+  #seccion5 .redes {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.3rem;
+    gap: 1rem;
   }
 }
 @media only screen and (min-width: 360px) {
