--- a/style/__responsive.scss
+++ b/style/__responsive.scss
@@ -590,7 +590,7 @@
 
             label,
             input {
-                margin: 0.5rem 0;
+                margin: 1rem 0;
             }
         }
 
@@ -598,8 +598,22 @@
 
 
         .acercaDeEmbalados {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
             margin: 0.5rem 0;
             border-bottom: double 1px #fff;
+            font-size: 1.3rem;
+        }
+
+        .redes1 {
+            display: flex;
+            flex-direction: column;
+
+            span {
+                font-size: 1.3rem;
+                margin: 1rem;
+            }
         }
 
 
@@ -886,16 +900,29 @@
 
             label,
             input {
-                margin: 0.5rem 0;
+                margin: 1rem 0;
             }
         }
 
 
 
-
         .acercaDeEmbalados {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
             margin: 0.5rem 0;
             border-bottom: double 1px #fff;
+            font-size: 1.3rem;
+        }
+
+        .redes1 {
+            display: flex;
+            flex-direction: column;
+
+            span {
+                font-size: 1.3rem;
+                margin: 1rem;
+            }
         }
 
 
