--- a/style/style.css
+++ b/style/style.css
@@ -345,7 +345,7 @@ header.Shadow {
 
 .footer {
   width: 100%;
-  height: 30rem;
+  height: 40rem;
   background-color: #000;
   color: #fff;
   text-align: center;
@@ -380,6 +380,9 @@ header.Shadow {
   color: #e80606;
   -webkit-text-decoration: underline red;
           text-decoration: underline red;
+}
+.footer p {
+  margin-top: 10px;
 }
 
 @media only screen and (min-width: 280px) {
@@ -783,11 +786,23 @@ header.Shadow {
   }
   #seccion5 .formulario label,
   #seccion5 .formulario input {
-    margin: 0.5rem 0;
+    margin: 1rem 0;
   }
   #seccion5 .acercaDeEmbalados {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     margin: 0.5rem 0;
     border-bottom: double 1px #fff;
+    font-size: 1.3rem;
+  }
+  #seccion5 .redes1 {
+    display: flex;
+    flex-direction: column;
+  }
+  #seccion5 .redes1 span {
+    font-size: 1.3rem;
+    margin: 1rem;
   }
 }
 @media only screen and (min-width: 540px) {
@@ -976,11 +991,23 @@ header.Shadow {
   }
   #seccion5 .formulario label,
   #seccion5 .formulario input {
-    margin: 0.5rem 0;
+    margin: 1rem 0;
   }
   #seccion5 .acercaDeEmbalados {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     margin: 0.5rem 0;
     border-bottom: double 1px #fff;
+    font-size: 1.3rem;
+  }
+  #seccion5 .redes1 {
+    display: flex;
+    flex-direction: column;
+  }
+  #seccion5 .redes1 span {
+    font-size: 1.3rem;
+    margin: 1rem;
   }
 }
 @media only screen and (min-width: 700px) {
