--- a/style/__commos.scss
+++ b/style/__commos.scss
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Roboto&family=Source+Sans+Pro&display=swap');
+
+
 
 * {
-    font-family: 'Barlow', sans-serif;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     scroll-padding-top: 1rem;
@@ -13,6 +14,9 @@
 
 }
 
+body {
+    overflow-x: hidden;
+}
 
 #contenedor {
 
@@ -34,9 +38,11 @@
     ;
 }
 
-$main-color: #d90429;
-$text-color: #020102;
-$bg-color: #ffff;
+$main-color: rgba(85, 38, 225);
+$text-color: rgba(0, 0, 0);
+$bg-color: rgba(255, 77, 43);
+$conten-color: rgba(255, 231, 0);
+$fon-color: rgba(164, 165, 174);
 
 html::-webkit-scrollbar {
     width: 0.5rem;
@@ -46,4 +52,25 @@ html::-webkit-scrollbar {
 html::-webkit-scrollbar-thumb {
     border-radius: 5rem;
     background: $text-color ;
+}
+
+.btn-wapp {
+    position: fixed;
+    width: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    right: 30px;
+    background: #0df053;
+    color: #fff;
+    border-radius: 40px;
+    text-align: center;
+    font-size: 50px;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+    z-index: 100;
+
+    &:hover {
+        text-decoration: none;
+        background: #fff;
+        color: #0df053;
+    }
 }
