--- a/style/__slaider.scss
+++ b/style/__slaider.scss
@@ -1,9 +1,57 @@
 @use'__commos' as c;
-
-.slaider {
+/*
+.portada {
     width: 100%;
-    height: 80vh;
+    top: 10px;
 
-    text-align: center;
-    font-size: 2rem;
+    .imgportada {
+        height: 100vh;
+    }
+
+
+
+    p {
+        padding: 200px 0;
+        margin-left: 600px;
+        width: 55%;
+
+
+
+        span {
+
+            font-size: 2.4rem;
+            color: c.$text-color ;
+
+        }
+
+        .p {
+
+            width: 50px;
+            font-size: 1rem;
+            color: #ffff;
+
+        }
+
+        button {
+            margin-top: 40px;
+            background: c.$conten-color;
+
+            a {
+                text-decoration: none;
+                color: c.$text-color;
+                padding: 1rem;
+
+                &:hover {
+                    padding: 0.3rem 1rem;
+                    background: c.$bg-color;
+                    color: #ffff;
+
+                }
+            }
+        }
+    }
+
+
+
 }
+*/
