--- a/style/style.scss
+++ b/style/style.scss
@@ -2,8 +2,7 @@
 @use'__slaider';
 @use'__zonaprincipal';
 @use'__zonadeproductos';
-@use'__acercade';
-@use'__zonadecategorias';
 @use'__footer';
 @use'__responsive';
 @use'__subpro';
+@use'__carrito';
