--- a/style/__commos.scss
+++ b/style/__commos.scss
@@ -1,76 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Roboto&family=Source+Sans+Pro&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Roboto&family=Source+Sans+Pro&display=swap');
 
-
-
-* {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    scroll-padding-top: 1rem;
-    scroll-behavior: smooth;
-    list-style: none;
-    text-decoration: none;
-    box-sizing: border-box;
-
-}
-
-body {
-    overflow-x: hidden;
-}
-
-#contenedor {
-
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(7, auto);
-    grid-template-areas:
-
-
-        "barraDeNavegacion"
-        "home"
-        "seccion1"
-        "seccion2"
-        "seccion3"
-        "seccion4"
-        "seccion5"
-
-
-    ;
-}
-
-$main-color: rgba(85, 38, 225);
-$text-color: rgba(0, 0, 0);
-$bg-color: rgba(255, 77, 43);
-$conten-color: rgba(255, 231, 0);
-$fon-color: rgba(164, 165, 174);
-
-html::-webkit-scrollbar {
-    width: 0.5rem;
-    background: transparent;
-}
-
-html::-webkit-scrollbar-thumb {
-    border-radius: 5rem;
-    background: $text-color ;
-}
-
-.btn-wapp {
-    position: fixed;
-    width: 55px;
-    line-height: 55px;
-    bottom: 30px;
-    right: 30px;
-    background: #0df053;
-    color: #fff;
-    border-radius: 40px;
-    text-align: center;
-    font-size: 50px;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
-    z-index: 100;
-
-    &:hover {
+    * {
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+        padding: 0;
+        scroll-padding-top: 1rem;
+        scroll-behavior: smooth;
+        list-style: none;
         text-decoration: none;
-        background: #fff;
-        color: #0df053;
+        box-sizing: border-box;
     }
-}
+
+    body {
+        overflow-x: hidden;
+    }
+
+    #contenedor {
+
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(6, auto);
+        grid-template-areas:
+
+
+            "barraDeNavegacion"
+            "home"
+            "seccion1"
+            "todoslosproductos"
+            "contanedorProducto1"
+            "seccion5"
+
+
+        ;
+    }
+
+    $main-color: rgba(85, 38, 225);
+    $text-color: rgba(0, 0, 0);
+    $bg-color: rgba(255, 77, 43);
+    $conten-color: rgba(255, 231, 0);
+    $fon-color: rgba(164, 165, 174);
+
+    html::-webkit-scrollbar {
+        width: 0.5rem;
+        background: transparent;
+    }
+
+    html::-webkit-scrollbar-thumb {
+        border-radius: 5rem;
+        background: $text-color ;
+    }
+
+    .btn-wapp {
+        position: fixed;
+        width: 55px;
+        line-height: 25px;
+        bottom: 30px;
+        right: 30px;
+        background: #0df053;
+        color: #fff;
+        border-radius: 40px;
+        text-align: center;
+        font-size: 50px;
+        box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+        z-index: 100;
+
+        &:hover {
+            text-decoration: none;
+            background: #fff;
+            color: #0df053;
+        }
+    }
