--- a/style/__footer.scss
+++ b/style/__footer.scss
@@ -1,54 +1,92 @@
 @use'__commos' as c;
 
-.footer {
-    width: 100%;
-    height: 40rem;
-    background-color: #000;
-    color: #fff;
-    text-align: center;
+#seccion5 {
+    display: grid;
+    grid-template-areas: seccion5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: black;
 
-    form {
 
-        .tyc {
-            font-size: 1.3rem;
-            color: #e80606;
-            text-decoration: underline red;
+    .footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 13rem;
+
+
+
+
+
+        .acercaDeEmbalados {
+            display: flex;
+            flex-direction: column;
+            text-align: start;
+            width: 33%;
+
+            a {
+                text-decoration: none;
+                color: #fff;
+            }
+        }
+
+        .conocenos {
+            width: 33%;
+
+            h1 {
+                img {
+                    width: 200px;
+                }
+            }
+        }
+
+        .redes1 {
+            display: flex;
+            flex-direction: column;
+            padding-bottom: 1rem;
+            width: 40%;
+
+            span {
+                color: #fff;
+                text-decoration: none;
+            }
+
+            .redes {
+                display: flex;
+                flex-direction: column;
+                gap: 0.3rem;
+                margin-top: 0.5rem;
+
+                a {
+                    text-decoration: none;
+                    font-size: 1rem;
+                    color: #fff;
+
+                    img {
+                        width: 1rem;
+                        background: #fff;
+                        border-radius: 5px;
+                        margin-right: 1rem;
+                    }
+
+
+                }
+            }
         }
 
     }
 
-    .boton {
-        margin-top: 10px;
-        margin-left: auto;
-        margin-right: auto;
-        border-radius: 28px;
-        border: 1px solid black;
-        display: block;
-        position: relative;
-        width: 30%;
-        cursor: pointer;
-        font-family: 'Barlow', sans-serif;
+    .creditos {
+        width: 100%;
         text-align: center;
-        font-size: 17px;
-        text-decoration: none;
+        font-size: 0.6rem;
 
-        &:hover {
-            background-color: red;
-            color: #f6f0f0;
-            transform: scale(1) translate(-15%, -20%);
-
+        a {
+            margin: 0.3rem;
         }
-
-
     }
 
-    .acercaDeEmbalados a {
-        color: #e80606;
-        text-decoration: underline red;
-
-    }
-
-    p {
-        margin-top: 10px;
-    }
 }
