--- a/style/__heder.scss
+++ b/style/__heder.scss
@@ -1,319 +1,487 @@
 @use'__commos' as c;
 
-
-.containr {
-
-    max-width: 100%;
-    height: 10vh;
-    margin-left: auto;
-    margin-right: auto;
-
-
-}
-
 header {
-    display: block;
-    width: 100%;
-    top: 0;
-    left: 0;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    background: #fff;
     z-index: 100;
-
-
+    width: 100%;
 }
+
 
 header.Shadow {
-    background: #ffff;
-    box-shadow: 4px 4px 20px rgb(15 54 55 / 20%);
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.2);
     transition: 0.5s ease;
+    opacity: 0.9;
+    filter: alpha(opacity=200);
+    zoom: 1;
+
+
 }
 
-.nav {
+#barraDeNavegacion {
+
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 35px;
-}
+    width: 100%;
 
-
-.logoembalado {
-
-    width: 30%;
-    margin-bottom: 10px;
-
-
-    .logo {
-        width: 250px;
-    }
-}
-
-.boton {
-    width: 30%;
-    display: flex;
-    flex-direction: row;
-
-    input {
-        width: 100%;
-    }
-
-    .iconobuscar {
-        display: flex;
-        justify-content: center;
-        background: c.$main-color;
-        color: #ffff;
-        font-size: 1.5rem;
-        border: solid 1px c.$main-color;
-        padding: 0 7px;
-
-    }
-}
-
-.corazon {
-    width: 10%;
-    font-size: 1.8rem;
-    text-align: center;
-    color: c.$main-color;
-}
-
-.carritoIcon {
-    width: 15%;
-
-    a {
-        color: c.$text-color ;
-        text-decoration: none;
-
-        i {
-            font-size: 1.5rem;
-            margin: 0.4rem;
-            color: c.$main-color;
-        }
-    }
-}
-
-#menuIcon {
-    font-size: 24px;
-    cursor: pointer;
-    color: c.$text-color;
-    display: none;
-}
-
-.menunav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding-bottom: 5px;
-    margin-top: 50px;
-
-    .menuCategorias {
+    .nav {
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        font-weight: bolder;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: flex-start;
+        align-content: center;
+        width: 100%;
+        gap: 2rem;
+        margin-top: 0.5rem;
 
+        #menuIcon {
+            display: none;
 
+        }
 
+        .logoembalado {
+            width: 15%;
+            text-align: center;
 
-        span {
-            margin: 0 5px;
-
-            #list {
-                text-align: center;
-                font-size: 1.5rem;
-                margin-left: 2px;
-
-
+            .logo {
+                width: 150px;
+                margin-top: 0;
             }
         }
 
-        li {
+        .boton {
+            display: flex;
+            flex-direction: row;
+            width: 35%;
+            text-align: center;
+
+            input {
+                width: 100%;
+                margin-top: 1rem;
+                text-align: justify;
+                border-radius: 15px;
+                padding-left: 0.8rem;
+
+            }
+
+            .iconobuscar {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                text-align: center;
 
 
-            ul {
-                background: #ffff;
-                position: fixed;
-                width: 30%;
-                height: 75vh;
-                margin-left: 0.5rem;
-                top: 9rem;
-                display: none;
+                i {
+                    font-size: 1.7rem;
+                    padding-top: 1.1rem;
+                    margin-left: -2.3rem;
+
+                }
+            }
+        }
+
+        .social {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-around;
+            width: 25%;
+            text-align: center;
+            margin-top: 0.3rem;
+
+            .instagran {
+                text-decoration: none;
+
+                img {
+                    width: 25px;
+                    padding-top: -1.5rem;
+                }
+
+            }
+
+            .facebook {
+                text-decoration: none;
+
+                img {
+                    width: 25px;
+                    padding-top: -1.5rem;
+                }
+            }
+
+            .tik-tok {
+                text-decoration: none;
+
+                img {
+                    width: 25px;
+                    padding-top: -1.5rem;
+                }
+            }
+
+            .corazon {
+                text-decoration: none;
+                text-align: center;
+                padding-top: -1.5rem;
 
 
-                li {
+                i {
+                    padding-top: 0.4rem;
+                    font-size: 2rem;
+                    color: c.$main-color;
+                }
+            }
 
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-
-
-                    a {
-                        color: c.$text-color;
-                        padding: 0.1rem;
-                        font-size: 0.85rem;
-                        display: list-item;
-                        list-style-type: square;
-
-                        &:hover {
-                            width: 90%;
-                            background: c.$fon-color ;
+            span {
+                font-size: 1rem;
+                margin-left: -1.7rem;
+                padding-top: 0.4rem;
+            }
+        }
 
 
+
+
+
+
+    }
+
+    #listprod {
+        display: flex;
+        flex-direction: column;
+        display: none;
+        position: fixed;
+        width: 35%;
+        text-align: start;
+        background: #fff;
+        z-index: 100;
+        margin-top: 50px;
+        margin-left: 17rem;
+        border: solid 2px black;
+        gap: 0.2rem;
+
+        a {
+            text-decoration: none;
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: c.$text-color;
+        }
+
+    }
+
+    .menunav {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: start;
+        text-align: center;
+        margin-top: 0.3rem;
+        margin-bottom: -0.5rem;
+        width: 100%;
+
+        .menuCategorias {
+            display: flex;
+            flex-direction: column;
+            font-size: 1rem;
+            cursor: pointer;
+
+            #list span {
+                display: flex;
+                flex-direction: row;
+
+
+
+                i {
+                    font-size: 1.3rem;
+                }
+
+                &:hover {
+
+
+                    #cat {
+                        display: flex;
+                        position: relative;
+                        animation: desoliegue 0.3s;
+
+
+                        li {
+                            position: relative;
+                            animation: aparece 2s;
+
+                        }
+
+                        @keyframes aparece {
+                            0% {
+
+                                height: 0%;
+                            }
+
+                            100% {
+
+                                height: 100%;
+                            }
+                        }
+                    }
+
+                    @keyframes desoliegue {
+                        0% {
+                            height: 0;
+                        }
+
+                        100% {
+                            height: 60vh;
                         }
                     }
                 }
             }
-        }
-    }
-
-    .menuCategorias:hover {
 
 
-        ul {
 
-            display: block;
-            transform: translate(0px, 0%);
-
-            li {
-
-                display: flex;
+            #cat {
+                display: none;
                 flex-direction: column;
-                align-items: flex-start;
-                margin: 0.5rem;
+                align-items: start;
+                position: fixed;
+                width: 100%;
+                background: black;
+                opacity: 0.9;
+                margin-left: -9rem;
+                padding-top: 1rem;
+                gap: 0.4rem;
+                animation: desoliegue 0.3s;
+                z-index: 60;
 
                 a {
-                    color: c.$text-color;
                     text-decoration: none;
+                    color: #fff;
+
+
                 }
+
+                .refencia {
+                    display: none;
+
+
+                    img {
+                        width: 100%;
+
+                    }
+
+
+                }
+
+                .a1 {
+                    margin-top: -1.7rem;
+                }
+
+                .a2 {
+                    margin-top: -1.5rem;
+                }
+
+                .a3 {
+                    margin-top: -3.5rem;
+                }
+
+                .a4 {
+                    margin-top: -5rem;
+                }
+
+                .a5 {
+                    margin-top: -6.5rem;
+                }
+
+                .a6 {
+                    margin-top: -8.3rem;
+                }
+
+                .a7 {
+                    margin-top: -9.8rem;
+                }
+
+                .a8 {
+                    margin-top: -11.5rem;
+                }
+
+                .a9 {
+                    margin-top: -13rem;
+                }
+
+                .a10 {
+                    margin-top: -14.5rem;
+                }
+
+                .a11 {
+                    margin-top: -16rem;
+                }
+
+                .a12 {
+                    margin-top: -17.5rem;
+                }
+
+                .a13 {
+                    margin-top: -19rem;
+                }
+
+                li {
+                    animation: aparece 2s;
+                }
+
+                li:hover {
+                    scale: 1.2 1.2 2;
+
+                    a:hover {
+                        color: c.$bg-color;
+                    }
+
+
+
+                    .refencia {
+                        display: flex;
+                        width: 380%;
+                        position: fixed;
+                        margin-left: 20rem;
+                        border: solid 1px #fff;
+                        opacity: 1.9;
+                        background: #000;
+
+                        img {
+                            width: 100%;
+                        }
+
+
+                    }
+                }
+
             }
-        }
-
-    }
 
 
-    .navar {
-        display: flex;
-        column-gap: 2rem;
-
-        a {
-            text-decoration: none;
-            color: c.$text-color;
-            font-size: 1rem;
-            text-transform: uppercase;
-            font-weight: 500;
 
             &:hover {
-                color: c.$main-color;
-                border-bottom: solid 1.7px c.$main-color;
-            }
-        }
-    }
-
-    .navar .active {
-        color: c.$main-color;
-
-    }
-
-    .accesoORegistro {
-        a {
-            color: c.$text-color;
-            text-decoration: none;
-
-            i {
-                color: c.$main-color ;
-            }
-        }
-    }
-}
-
-
-
-
-#listprod {
-    position: fixed;
-    background: #ffff;
-
-    border: 1px solid c.$main-color;
-    top: 5px;
-    margin-left: 25rem;
-    width: 10%;
-    z-index: 100;
-    display: none;
-
-    li a {
-
-        display: block;
-        width: 100%;
-        color: c.$text-color;
-        padding: 12px 20px;
-        font-size: 20px;
-
-        &:hover {
-
-            color: red;
-        }
-
-    }
-
-}
-
-/*
-
-#coverContSearc {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    left: 0;
-    background: rgba(0, 0, 0, 0.5);
-    display: none;
-}
-
-#barraDeNavegacion {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 100%;
-    height: 100px;
-    border: solid 5px black;
-    margin: 0 0px;
-
-    #logo {
-        max-width: 250px;
-        border: solid 5px black;
-        padding: 3%;
-
-    }
-
-    #navardPrincipal {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        max-width: 700px;
-        border: solid 5px black;
-
-        ul {
-            display: flex;
-            flex-direction: row;
-
-            li {
-                max-width: 100px;
-
-                a {
-                    font-size: 1.2rem;
-                    margin: 1rem;
+                #cat {
+                    display: flex;
                 }
             }
         }
-    }
 
-    .iconos {
-        display: flex;
-        flex-direction: row;
+        .navar {
 
-        .btnIcon {
-            margin: 1.5rem;
+            display: flex;
+            flex-direction: row;
+            gap: 1rem;
+            margin-left: 5rem;
+
+            .active {
+                color: c.$main-color ;
+            }
+
+            a {
+                text-decoration: none;
+                color: black;
+            }
+
+            .componentes {
+                .subcomponentes {
+                    display: none;
+                    flex-direction: row;
+                    justify-content: center;
+                    position: fixed;
+                    width: 100%;
+                    background: black;
+                    opacity: 0.9;
+                    padding-top: 1rem;
+                    gap: 1.5rem;
+                    animation: desglose 0.3s;
+                    z-index: 60;
+
+
+                    a {
+                        color: #fff;
+                        font-size: 1rem;
+
+                    }
+
+                    li {
+                        animation: movimiento 0.3s;
+                        text-align: start;
+
+                        ul {
+                            li {
+
+                                list-style: disc;
+                                color: #fff;
+
+                                a {
+                                    font-size: 0.8rem;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .c1 {
+                    margin-left: -27.2rem;
+
+                }
+
+                .c2 {
+                    margin-left: -40.3rem;
+
+                }
+
+                .c3 {
+                    margin-left: -44.3rem;
+
+                }
+
+                .c4 {
+                    margin-left: -50.8rem;
+
+                }
+
+                .c5 {
+                    margin-left: -56.4rem;
+
+                }
+            }
+
+            .componentes:hover {
+                .subcomponentes {
+                    display: flex;
+                    position: fixed;
+                    display: grid;
+                    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+                }
+
+                @keyframes desglose {
+                    0% {
+                        height: 0;
+                    }
+
+                    100% {
+                        height: 35vh;
+                    }
+                }
+
+                @keyframes movimiento {
+                    0% {
+                        height: 0;
+                    }
+
+                    100% {
+                        height: 3vh;
+                    }
+                }
+
+            }
+        }
+
+        .accesoORegistro {
+            display: flex;
+            width: 10%;
+            text-align: center;
+            margin-left: 8rem;
+
         }
     }
-}
 
-*/
+}
