--- a/style/__zonadeproductos.scss
+++ b/style/__zonadeproductos.scss
@@ -1,52 +1,309 @@
 @use'__commos' as c;
 
-.contenedor {
-    max-width: auto;
-    padding: 10px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    /* oculto lo que queda fuera del .contenedor */
-    contain: paint;
+#todoslosproductos {
+    display: grid;
+    grid-template-areas: todoslosproductos;
+    position: relative;
 
-    .enSuperOterta {
-        font-size: 2.3rem;
+    .tituloPrincipalProducto {
+        font-size: 2rem;
+        text-align: center;
+        margin-top: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    #seccionGamer,
+    #seccionTablets {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 95%;
+        margin-top: 2rem;
+        margin-left: 3.5rem;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+
+
+
+        .contenedorTarget,
+        .contenedorTarge {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 200px;
+            height: 230px;
+            background: #fff;
+            border: solid 1px #e4e3e3;
+            border-radius: 10px;
+            box-shadow: 0 0 15px #d5d4d4;
+            text-align: center;
+            margin: 2rem;
+
+
+
+
+            a {
+
+                text-decoration: none;
+                color: black;
+
+                .imgTarget {
+                    width: 150px;
+                }
+
+                .tituloTarget {
+                    margin-top: 20px;
+                    font-size: 1rem;
+                }
+            }
+
+            &:Hover {
+                scale: 1.2;
+            }
+        }
+
+
+
     }
 }
 
-/* SECCION CONTENEDOR DE ITEMS */
-.contenedor .contenedor-ites {
-    margin-top: 15px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
-    grid-gap: 10px;
-    grid-row-gap: 30px;
-    width: 30%;
-    height: 50%;
-    transition: .3s;
+// estilos de la pagina de productos
+
+#contanedorProducto1 {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    margin-top: 7rem;
+    background: #fff;
+    z-index: 90;
+
 }
 
-.contenedor .contenedor-ites .ite {
-    max-width: auto;
-    margin: 20px 0.1rem;
+#contanedorProducto {
 
-    padding: 0.5px;
-    transition: .3s;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    position: -webkit-sticky;
+    position: sticky;
+    margin-top: 1rem;
+    z-index: 80;
+    background: #fafdfc;
+
+    #regresarbtn {
+        margin-left: 95%;
+        padding: 0.2rem;
+        border-color: #d5d4d4;
+        box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+
+        &:hover {
+            background: c.$main-color;
+            color: #fff;
+            scale: 0.8;
+        }
+    }
+
+    .prond {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: center;
+        margin-top: 5rem;
+        z-index: 80;
+
+
+        .imgDelProducto {
+            width: 45%;
+            background: #fafdfc;
+
+            .imgProducto {
+                width: 550px;
+                position: relative;
+
+                &:hover {
+                    zoom: 1.1;
+
+                }
+            }
+        }
+
+        .detallesDeProducto {
+
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0 0 3px #666;
+            background: #fafdfc;
+            border: solid 1px #fafdfc;
+            border-radius: 10px;
+            width: 45%;
+            gap: 1rem;
+
+            .nombreDelProducto {
+                width: 80%;
+                margin-left: 2rem;
+            }
+
+            .texto {
+                width: 80%;
+                margin-left: 2rem;
+                text-align: justify;
+            }
+
+            .video {
+                width: 80%;
+                margin-left: 2rem;
+            }
+
+            .precio {
+                width: 80%;
+                margin-left: 2rem;
+                color: c.$bg-color;
+                font-weight: bolder;
+                font-size: 1.5rem;
+
+                .precio1 {
+                    text-decoration: line-through;
+                    color: #a69f9f;
+                    font-weight: lighter;
+                    font-size: 1rem;
+                }
+            }
+
+            .agrega {
+                width: 80%;
+                margin-left: 2rem;
+                border: dashed 2px #a69f9f;
+                padding: 1rem;
+
+                span {
+                    color: c.$bg-color;
+                }
+            }
+
+            #cantidad {
+                display: flex;
+                flex-direction: row;
+                margin-left: 2rem;
+
+                input {
+                    padding: 0rem 0.5rem;
+                    font-size: 1.5rem;
+                }
+
+
+                p {
+                    border: solid 1.5px #000;
+                    border-radius: 5px;
+                    padding: 0.5rem;
+                    font-size: 1rem;
+                }
+            }
+
+            .disponibles {
+                width: 80%;
+                margin-left: 2rem;
+            }
+
+            .botonWapp {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                width: 80%;
+                margin-left: 2rem;
+                background: #0df053;
+                color: #fff;
+                font-size: 20px;
+                box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+                border-radius: 10px;
+                text-decoration: none;
+                padding: 0 0.5rem;
+
+
+                i {
+
+                    font-size: 27px;
+                }
+
+                span {
+                    font-size: 20px;
+
+
+                }
+
+                &:hover {
+                    scale: 1.2;
+                }
+            }
+
+            .botones {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                width: 80%;
+                margin-left: 2.5rem;
+                gap: 1rem;
+
+                .botonAgregarCarrito,
+                .comprar {
+                    margin-left: -2rem;
+                    width: 45%;
+                    background: c.$text-color ;
+                    color: #fff;
+                    text-align: center;
+                    padding: 0.5rem;
+                    border-radius: 10px;
+                    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+
+                    &:hover {
+                        background: c.$conten-color;
+                        color: c.$text-color;
+                    }
+                }
+            }
+
+            .textEnd {
+
+                width: 80%;
+                margin-left: 2rem;
+                font-style: oblique;
+            }
+        }
+    }
 }
 
-.contenedor .contenedor-ites .ite .img-ite {
-    width: 80%;
-}
-
-.contenedor .contenedor-ites .ite:hover {
-    box-shadow: 0 0 3px #666;
-    scale: 1.05;
-}
-
-.contenedor .contenedor-ites .ite .titulo-ite {
-    display: block;
-    font-weight: bold;
-    font-size: 1.2rem;
+.descripcionCompleta {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
     text-align: center;
-    text-transform: uppercase;
+    width: 85%;
+
+    h3 {
+        font-size: 2rem;
+        color: c.$main-color;
+    }
+
+    p {
+        text-align: justify;
+    }
+}
+
+.productosRelacionados {
+    margin-top: 5rem;
+    border: solid 1px black;
+
+    h1 {
+        margin-top: 2rem;
+        text-align: center;
+        font-size: 2rem;
+    }
 }
