--- a/style/__zonadeproductos.scss
+++ b/style/__zonadeproductos.scss
@@ -1,8 +1,9 @@
 @use'__commos' as c;
 
+.seccion-audifonos,
+.seccion-gamer,
 #todoslosproductos {
-    display: grid;
-    grid-template-areas: todoslosproductos;
+
     position: relative;
 
     .tituloPrincipalProducto {
@@ -12,7 +13,8 @@
         margin-bottom: 1rem;
     }
 
-    #seccionGamer,
+    .productos-audifonos,
+    .productos-gamer,
     #seccionTablets {
         display: flex;
         flex-direction: column;
@@ -23,8 +25,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
 
-
-
+        .contanedoraudifonos,
         .contenedorTarget,
         .contenedorTarge {
             display: flex;
@@ -69,7 +70,8 @@
 }
 
 // estilos de la pagina de productos
-
+.contanedoraudifonos,
+.contanedorProduct,
 #contanedorProducto1 {
     display: flex;
     flex-direction: row;
@@ -77,7 +79,8 @@
     justify-content: center;
     position: absolute;
     width: 100%;
-    margin-top: 7rem;
+    margin-top: 1rem;
+    margin-left: -3.5rem;
     background: #fff;
     z-index: 90;
 
